# bewise_test

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
app/: pyproject.toml
app/src/: alembic.ini  crud.py  database.py  jservice_client.py  main.py  models.py  schemas.py
app/src/db/: crud.py  models.py
app/src/db/migrations/: env.py
app/src/db/migrations/versions/: 8a755419e207_create_datebase.py
app/src/migrations/versions/: 3fa8ceebb66a_create_table.py  ad5b51fdd626_create_database.py  f1f15db1856f_create_table.py
backend/: pyproject.toml
py-linters/: Dockerfile  pyproject.toml
